Don't mention "Package container-interop/container-interop is abandoned"

--- a/composer.json
+++ b/composer.json
@@ -147,5 +147,8 @@
         "periodical-tasks": [
             "security-checker security:check"
         ]
+    },
+    "replace": {
+        "container-interop/container-interop": "*"
     }
 }
