--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -243,6 +243,17 @@ showcases:
                     type: text
                 html:
                     type: html
+        collection:
+            type: collection
+            group: Collections
+            fields:
+                set:
+                    type: set
+                    fields:
+                        title:
+                            type: text
+                textarea:
+                    type: textarea
     relations:
         entries:
             multiple: false
