To able to setcontent get content by graphQL

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -17,8 +17,8 @@ doctrine:
         # server_version: '3.15'
 
         # For MySQL
-        # driver: 'pdo_mysql'
-        # server_version: 5.7
+        driver: 'pdo_mysql'
+        server_version: 5.7
 
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
