--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -40,7 +40,7 @@ RUN extBuildDeps=" \
             libzip-dev \
             sendmail && \
     rm -rf /var/lib/apt/lists/* && \
-    docker-php-ext-configure gd --enable-gd-native-ttf --with-jpeg-dir=/usr/lib/x86_64-linux-gnu --with-png-dir=/usr/lib/x86_64-linux-gnu --with-freetype-dir=/usr/lib/x86_64-linux-gnu && \
+    docker-php-ext-configure gd --with-jpeg-dir=/usr/lib/x86_64-linux-gnu --with-png-dir=/usr/lib/x86_64-linux-gnu --with-freetype-dir=/usr/lib/x86_64-linux-gnu && \
     docker-php-ext-configure intl --enable-intl && \
     docker-php-ext-install \
             exif \
@@ -52,6 +52,7 @@ RUN extBuildDeps=" \
             mbstring \
             gd \
             pcntl \
+            intl \
             opcache && \
     wget --progress=bar:force --retry-connrefused -t 5 \
     https://github.com/kelseyhightower/confd/releases/download/v${CONFD_VERSION}/confd-${CONFD_VERSION}-linux-amd64 -O /bin/confd && \
