runs tests in travis with less noise

--- a/.travis.yml
+++ b/.travis.yml
@@ -69,4 +69,4 @@ script:
   # run API tests
   - make behat-api
   # run JS e2e tests
-  - ./run_behat_tests.sh && make behat-js
+  - ./run_behat_tests.sh && make behat-js-quiet
