--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "locutus": "^2.0.11",
     "luxon": "^1.21.3",
     "no-scroll": "^2.1.1",
+    "node-vibrant": "^3.1.5",
     "popper.js": "^1.16.0",
     "register-service-worker": "^1.6.2",
     "selectize": "^0.12.6",
