updates contenttypes and adds test for sets

--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -241,8 +241,8 @@ showcases:
             fields:
                 title:
                     type: text
-                html:
-                    type: html
+                textarea:
+                    type: textarea
         collection:
             type: collection
             group: Collections
