remove Gedmo translation 2019 WIP

--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -69,6 +69,7 @@ pages:
         subheading:
             type: text
             class: large
+            localize: true
         slug:
             type: slug
             uses: header
