--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -1,4 +1,5 @@
 monolog:
+    channels: ['db']
     handlers:
         main:
             type: fingers_crossed
@@ -10,6 +11,10 @@ monolog:
             path: '%kernel.logs_dir%/%kernel.environment%.log'
             level: debug
         console:
-            type:   console
+            type: console
             process_psr_3_messages: false
             channels: ['!event', '!doctrine']
+        db:
+            channels: ['db']
+            type: service
+            id: Bolt\Log\LogHandler
