--- a/phpstan.neon
+++ b/phpstan.neon
@@ -17,6 +17,7 @@ parameters:
         -
             message: '#Unreachable statement - code above always terminates#'
             path: %currentWorkingDirectory%/src/*
+        # false positive: TranslationInterface does not know about FieldTranslation::getValue(). Skip this error.
         -
             message: '#Call to an undefined method Knp\\DoctrineBehaviors\\Contract\\Entity\\TranslationInterface#'
             path: %currentWorkingDirectory%/src/*
