--- a/.env.dist
+++ b/.env.dist
@@ -6,22 +6,26 @@
 APP_ENV=dev
 APP_DEBUG=1
 APP_SECRET=67d829bf61dc5f87a73fd814e2c9f629
+#TRUSTED_PROXIES=127.0.0.1,127.0.0.2
+#TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# For a sqlite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11"
 # Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
 
 # SQLite
 DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/bolt.sqlite
 
 # MySQL (with docker)
-#DATABASE_HOST=database
-#DATABASE_USER=bolt_db_user
-#DATABASE_PASSWORD=bolt_db_password
-#DATABASE_NAME=bolt
-#DATABASE_URL=mysql://bolt_db_user:bolt_db_password@database:3306/bolt
+DATABASE_HOST=hostname
+DATABASE_USER=bolt_db_user
+DATABASE_PASSWORD=bolt_db_password
+DATABASE_PORT=3306
+DATABASE_NAME=bolt
+#DATABASE_URL=mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
 
 ###< doctrine/doctrine-bundle ###
 
