--- a/config/routes/translation.yml
+++ b/config/routes/translation.yml
@@ -1,3 +1,3 @@
 _translation_webui:
-    resource: "@TranslationBundle/Resources/config/routing_webui.yml"
+    resource: "@TranslationBundle/Resources/config/routing_webui.yaml"
     prefix: '%bolt.backend_url%'
