--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -7,6 +7,8 @@ parameters:
 
 doctrine:
     dbal:
+        types:
+            field_value: Bolt\Doctrine\Mapping\FieldValueType
         charset: utf8mb4
         url: '%env(resolve:DATABASE_URL)%'
 
