--- a/behat.yml
+++ b/behat.yml
@@ -6,7 +6,7 @@ default:
       tags: ~@wip
 
   autoload:
-    - "%paths.base%/tests/api/bootstrap"
+    - "%paths.base%/tests/behat/bootstrap"
 
   formatters:
     pretty:
@@ -54,4 +54,4 @@ default:
             timeout: 5
         - Context\ApiContext
         - Context\WebContext
-      paths: [ "%paths.base%/tests/api", "%paths.base%/tests/behat"]
+      paths: [ "%paths.base%/tests/api", "%paths.base%/tests/e2e"]
