Popover info works

--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -181,6 +181,7 @@ showcases:
             postfix: "This field gets parsed as <a href='https://help.github.com/articles/markdown-basics'>Markdown</a>, when rendered on the site."
         email:
             type: email
+            info: "This is an info box shown as a popover next to the field label."
         embed:
             type: embed
             group: Media
