Clarify database section in .env.dist a little

--- a/.env.dist
+++ b/.env.dist
@@ -5,27 +5,31 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_DEBUG=1
-APP_SECRET=67d829bf61dc5f87a73fd814e2c9f629
+APP_SECRET=73fd814e2c9fbf61dc5f87a62967d829
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
-# For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11"
-# Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
 
-# SQLite
+# uncomment the appropiate line(s) below to set the database using a DSN (data source name)
+# Replace `db_user`, `db_password` and `db_name` where needed. Depending on your server settings,
+# you might also need to configure the host ("localhost" / "127.0.0.1") or the port number ("3306")
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+
+# SQLite (note: _three_ slashes)
 DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/bolt.sqlite
 
-# MySQL (with docker)
-DATABASE_HOST=hostname
-DATABASE_USER=bolt_db_user
-DATABASE_PASSWORD=bolt_db_password
-DATABASE_PORT=3306
-DATABASE_NAME=bolt
-#DATABASE_URL=mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+# MYSQL / MariaDB
+#DATABASE_URL=mysql://db_user:"db_password"@localhost:3306/db_name
+
+# Postgres
+#DATABASE_URL=postgresql://db_user:"db_password"@localhost:5432/db_name?serverVersion=11"
+
+# MYSQL / MariaDB (additional settings, needed for Docker)
+#DATABASE_USER=db_user
+#DATABASE_PASSWORD=db_password
+#DATABASE_NAME=db_name
 
 ###< doctrine/doctrine-bundle ###
 
