remove title references

--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -195,7 +195,7 @@ showcases:
         image:
             type: image
             extensions: [ gif, jpg, png ]
-            attrib: [ alt, title ]
+            attrib: [ alt ]
             placeholder: https://source.unsplash.com/1280x768/?animal,koala,kitten,puppy,cute/__random__
         imagelist:
             type: imagelist
