--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -203,6 +203,7 @@ showcases:
             group: Files
         filelist:
             type: filelist
+            limit: 5
         checkbox:
             type: checkbox
             label: "This is a checkbox"
