contenttypes.yaml includes correct examples with current field types

--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -373,20 +373,21 @@ tests:
 # text - varchar(256) - input type text.
 # integer - integer - Input field for integer numbers.
 # float - double - Input field for floating numbers, stored as 'Double'.
-# geolocation - text (65kb) - Input field for geolocation. Enter an address, and the location is geocoded to latitude/longitude coordinates
-# imagelist - text (65kb) - Input type for imagelists. Add multiple images with a description. Useful for image sliders, galleries, etcetera.
+# imagelist - text (65kb) - Input type for imagelists. Add multiple images. Useful for image sliders, galleries, etcetera.
 # image - varchar(256) - image select/upload widget, stored as filename.
 # file - varchar(256) - file select/upload widget, stored as filename.
 # filelist - text (65kb) - Input type for a list of files. Including a description.
 # video - varchar(256) - Video embed widget, stored as filename.
 # html - text (65kb) - wysiwyg element.
 # textarea - varchar(32768) - Simple, plain < textarea > field.
-# markdown - varchar(32768) - Simple, plain < textarea > field, which is parsed as Markdown text.
+# markdown - varchar(32768) - wysiwyg element, which is parsed as Markdown text.
 # datetime - datetime - date and time selector widget.
 # date - datetime - date selector widget.
 # select - varchar(256) - select with predefined values
 # templateselect - varchar(256) - select with template filenames
 # checkbox - integer - checkbox-field which is 1 (checked) or 0 (unchecked)
+# set - text (65kb) - Input type for sests. Group fields semantically into a combined set field.
+# Collection - text (65kb) - Input type for collections. Add multiple fields of different types. Useful for lists.
 
 # Using YAML repeated nodes
 #
@@ -418,6 +419,7 @@ tests:
 #
 #contenttype_abc:
 #    name: ContentType Abc
+#    slug: contenttypeabc
 #    fields:
 #        <<: *field_defaults
 #        image:
@@ -433,6 +435,7 @@ tests:
 #
 #contenttype_xyz:
 #    name: ContentType Xyz
+#    slug: contenttypexyz
 #    fields:
 #        <<: *field_defaults
 #        selectfield:
