--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_install:
 
 install:
   - COMPOSER_MEMORY_LIMIT=-1 composer update $COMPOSER_FLAGS
+  - ./bin/console bolt:info
   - nvm install 12.5
   - npm ci
   - mkdir -p ./var/log/e2e-reports/report/features/
