Try to upload images to imgur

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,3 +71,5 @@ script:
   - make behat-api-quiet
   # run JS e2e tests
   - ./run_behat_tests.sh && make behat-js-quiet
+  # Upload Behat screenshots to IMGUR
+  - ./vendor/bin/upload-screenshots "var/log/behat-reports/*.png"
