--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -5,8 +5,6 @@ server {
 
     client_max_body_size 10M;
 
-    index index.php;
-
     location / {
         # try to serve file directly, fallback to index.php
         try_files $uri /index.php$is_args$args;
@@ -19,8 +17,10 @@ server {
         # Set the HTTP parameter if not set in fastcgi_params
         fastcgi_param HTTPS           $https if_not_empty;
 
-        fastcgi_pass   php:9000;
+        fastcgi_buffer_size 32k;
+        fastcgi_buffers 32 4k;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        fastcgi_pass   php:9000;
         include fastcgi_params;
 
         # optionally set the value of the environment variables used in the application
@@ -49,6 +49,6 @@ server {
         return 404;
     }
 
-    error_log /var/log/nginx/project_error.log;
-    access_log /var/log/nginx/project_access.log;
+    error_log /dev/stderr;
+    access_log /dev/stdout;
 }
